fixed swagger for user endpoints
